--- a/02.layout02.html
+++ b/02.layout02.html
@@ -5,7 +5,7 @@
     <title>layout02</title>
     <style>
         body {background: #b3e5fc;}
-        #wrap {width: 1000px; height: 900px; margin: auto; font-size: 40px; color: #fff; text-align: center; text-transform: uppercase;}
+        #wrap {width: 1000px; height: 900px; margin: 0 auto; font-size: 40px; color: #fff; text-align: center; text-transform: uppercase;}
         #header {width: 1000px; height: 100px; background-color: #0277bd;}
         #nav {width: 1000px; height: 100px; background-color: #0288d1;}
         #side_left {float: left; width: 300px; height: 600px; background-color: #039be5;}
