--- a/web/index.html
+++ b/web/index.html
@@ -14,9 +14,27 @@
 </head>
 <body>
     <div id="wrap">
-        <div id="header"></div>
-        <div id="contents"></div>
-        <div id="footer"></div>
+        <div id="header">
+            <div class="container">header</div>
+        </div>
+        <div id="contents">
+            <div id="cont_nav">
+                <div class="container">cont_nav</div>
+            </div>
+            <div id="cont_title">
+                <div class="container">cont_title</div>
+            </div>
+            <div id="cont_banner">
+                <div class="container">cont_banner</div>
+
+            </div>
+            <div id="cont_content">
+                <div class="container">cont_content</div>
+            </div>
+        </div>
+        <div id="footer">
+            <div class="container">footer</div>
+        </div>
     </div>
 </body>
 </html>
