--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,13 @@
     <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
+    <!-- 스킵 네비게이션 -->
+    <div id="skip">
+        <a href="#cont_nav">전체 메뉴 바로가기</a>
+        <a href="#cont_banner">배너 영역 바로가기</a>
+        <a href="#cont_content">컨텐츠 영역 바로가기</a>
+    </div>
+
     <div id="wrap">
         <div id="header">
             <div class="container">header</div>
