[웹 표준 사이트] 헤더 배경과 메뉴 추가

--- a/web/index.html
+++ b/web/index.html
@@ -22,8 +22,18 @@
 
     <div id="wrap">
         <div id="header">
-            <div class="container">header</div>
+            <div class="container">
+                <div class="header">
+                    <div class="header-menu">
+                        <a href="https://github.com/kses1010/standard-website">Github</a>
+                        <a href="https://github.com/kses1010">Profile</a>
+                    </div>
+                    <div class="header-title"></div>
+                    <div class="header-icon"></div>
+                </div>
+            </div>
         </div>
+
         <div id="contents">
             <div id="cont_nav">
                 <div class="container">cont_nav</div>
