[웹 표준 사이트] 헤더 타이틀 추가

--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
     <!--CSS Style -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/stylesheet.css">
+
 </head>
 <body>
     <!-- 스킵 네비게이션 -->
@@ -28,7 +29,12 @@
                         <a href="https://github.com/kses1010/standard-website">Github</a>
                         <a href="https://github.com/kses1010">Profile</a>
                     </div>
-                    <div class="header-title"></div>
+                    <!-- 헤더 메뉴 -->
+                    <div class="header-title">
+                        <h1>Professional Publisher & Designer</h1><br>
+                        <a href="https://github.com/kses1010">https://github.com/kses1010</a>
+                    </div>
+                    <!-- 헤더 타이틀 -->
                     <div class="header-icon"></div>
                 </div>
             </div>
