[웹 표준 사이트] 헤더 아이콘 추가

--- a/web/index.html
+++ b/web/index.html
@@ -31,11 +31,17 @@
                     </div>
                     <!-- 헤더 메뉴 -->
                     <div class="header-title">
-                        <h1>Professional Publisher & Designer</h1><br>
+                        <h1>Professional Developer</h1><br>
                         <a href="https://github.com/kses1010">https://github.com/kses1010</a>
                     </div>
                     <!-- 헤더 타이틀 -->
-                    <div class="header-icon"></div>
+                    <div class="header-icon">
+                        <a href="#" class="icon1"><span class="ir_pm">icon1</span></a>
+                        <a href="#" class="icon2"><span class="ir_pm">icon2</span></a>
+                        <a href="#" class="icon3"><span class="ir_pm">icon3</span></a>
+                        <a href="#" class="icon4"><span class="ir_pm">icon4</span></a>
+                    </div>
+                    <!-- 헤더 아이콘 -->
                 </div>
             </div>
         </div>
