--- a/web/index.html
+++ b/web/index.html
@@ -134,6 +134,19 @@
                         <div class="column col1">
                             <h3><span class="ico_img ir_pm">아이콘</span><span class="ico_title">Notice</span></h3>
                             <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            <!-- 게시판 -->
+                            <div class="notice">
+                                <h4>Developer Notice</h4>
+                                <ul>
+                                    <li><a href="#">display:inline 과 display:block의 차이점은 무엇일까요?</a></li>
+                                    <li><a href="#">HTML 태그 중에 dl, dd, ul, ol, li의 차이점은 무엇일까요?</a></li>
+                                    <li><a href="#">HTML 태그 중에 strong과 em 태그의 차이점은 무엇일까요?</a></li>
+                                    <li><a href="#">컨텐츠 요소를 가운데로 오게 하는 방법을 알려주세요!</a></li>
+                                    <li><a href="#">doc 타입을 선언하는 이유가 무엇인지 설명하세요.</a></li>
+                                </ul>
+                                <a href="#" class="more ir_pm" title="더보기">더 보기</a>
+                            </div>
+                            <!-- 게시판 -->
                         </div>
                         <!-- col1 -->
                         <div class="column col2">
