--- a/interactive-web/index.html
+++ b/interactive-web/index.html
@@ -9,19 +9,15 @@
         display: flex;
       }
       .box {
-        width: 100px;
+        width: auto;
         height: 100px;
         border: 2px solid black;
         background: rgba(255, 255, 0, 0.7);
+        transition: 2s;
       }
       .box:hover {
-        /* transform: scale(2) rotate(15deg); */
-        /* transform: skewY(-30deg); */
-        /* transform: translate(0, 10px); */
-        /* transform: scale(1.5); */
-        /* transform-origin: bottom; */
-        transform: rotate(30deg);
-        transform-origin: 50% 0%;
+        width: 200px;
+        background: red;
       }
     </style>
   </head>
